--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,8 @@ p{
     padding-left:120px;
 }
 
-.margin-top-bottom{
-    margin-top: 100px;
+.margin-top{
+    padding-top: 60px;
 }
 /* this css apply all body and reclass end */
 
@@ -58,3 +58,117 @@ p{
     margin-top: 19px;
     border-radius: 10px;
 }
+
+/* top section css end here */
+
+/* mission and vission section css start here */
+.mission-vission-section h1{
+    text-align: center;
+}
+.mission_vission{
+    width: 30%;
+    background-color: #FEE4CD;
+    margin: 40px 20px;
+    border-radius: 20px;
+    padding: 30px; 
+}
+.mission_vission:nth-child(2) {
+    background: #D3DEDC;
+  }
+  .mission_vission:nth-child(3) {
+    background: #EDF5F6;
+  }
+
+.mission_vission img{
+    height: 125px;
+    width: 135px;
+}
+
+.mission_vission p{
+    font-size: 15px;
+}
+.mission_vission_center{
+    width: 85%;
+    margin: 0 auto;
+}
+
+/* mission and vission section css end here */
+
+
+/* developer limites css start here */
+
+.developer-item img{
+    width: 420px;
+    height: 350px;
+    padding-left: 120px;
+
+}
+.developer-limite-area h2{
+    font-size: 35px;
+    color: #333333;
+}
+.developer-item{
+    width: 45%;
+    padding:10px 0;
+}
+.developer-item p{
+    font-size: 17px;
+}
+#developer-coding-bg{
+    background-image: url(../images/shapes/shape-1.png);
+    background-repeat: no-repeat;
+    background-position: 3% 50%;
+    background-size: 15%;
+}
+
+/* developer area css end here */
+
+/* Community area css start here */
+.community-item{
+    padding-left: 102px;
+}
+.community-item h2{
+    font-size: 35px;
+    color: #333333
+}
+
+#community-bg{
+    background-image: url(../images/shapes/shape-1.png);
+    background-repeat: no-repeat;
+    background-position: 100% 121%;
+    background-size: 30%;
+}
+
+/* Community area css end here */
+   
+
+
+
+
+
+
+
+
+
+/* footer area css start here */
+
+.footer-area{
+    background-color: #0B0D17;
+    text-align: center;
+    padding: 30px 0;
+}
+.footer-area h1{
+    font-family: 'The Nautigal', cursive;
+    font-size: 60px;
+    color: #fff;
+}
+.footer-area span{
+    color: #99434C;
+}
+.footer-area p{
+    font-size: 11px;
+    color: #5F798F;
+    padding: 0;
+    margin: 0;
+}
+/* footer area css end here */
